--- a/sw/mm/Makefile
+++ b/sw/mm/Makefile
@@ -16,7 +16,7 @@ LIBC = ../elibc
 LD_LIBRARY_PATH = /opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0/include
 CCFLAGS = -Wall -O2 -I$(LIBC)  -fomit-frame-pointer -fno-builtin -march=rv32im -mstrict-align -mabi=ilp32
 LDFLAGS = -T$(PROJ).ld -Map=$(PROJ).map
-LD_SOFT_FP = -L/opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0/rv32im/ilp32 -lgcc -L/opt/riscv/riscv32-unknown-elf/lib/rv32im/ilp32 -lm
+LD_SOFT_FP = /opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0/rv32im/ilp32/libgcc.a -L/opt/riscv/riscv32-unknown-elf/lib/rv32im/ilp32 -lm /opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0/rv32im/ilp32/libgcc.a  /opt/riscv/riscv32-unknown-elf/lib/rv32im/ilp32/libm.a
 
 OCFLAGS = -O binary
 ODFLAGS = -d
@@ -40,7 +40,7 @@ $(PROJ).bin: _$(PROJ).o
 	$(OC) $(OCFLAGS) $< $@
 	$(OD) $(ODFLAGS) $< > $(PROJ).objdump
 	$(OD) -s $< > $(PROJ).content
-
+	
 $(PROJ).ebf: $(PROJ).bin
 	./create_ebf.sh $<
 
