--- a/sw/matmul/Makefile
+++ b/sw/matmul/Makefile
@@ -13,14 +13,14 @@ OC = $(CCPATH)/$(CROSS)-objcopy
 OD = $(CCPATH)/$(CROSS)-objdump
 
 LIBC = ../elibc
+LD_FILES = dhry_tcm.ld
 
 CCFLAGS = -Wall -O2 -I$(LIBC) -fomit-frame-pointer -fno-builtin -march=rv32im -mstrict-align -mabi=ilp32
-LDFLAGS = -T$(PROJ).ld -Map=$(PROJ).map
+LDFLAGS = -T$(LD_FILES) -Map=$(PROJ).map
 LD_SOFT_FP = -L/opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0 -lgcc
 
 OCFLAGS = -O binary
 ODFLAGS = -d
-
 PROJ = matmul
 OBJS = boot.o matmul.o matmul_main.o $(LIBC)/stdio.o $(LIBC)/stdlib.o $(LIBC)/string.o $(LIBC)/time.o $(LIBC)/uart.o $(LIBC)/util.o
 
@@ -30,7 +30,7 @@ all:
 clean:
 	rm -rf *.s $(LIBC)/*.o *.o *.bin *.objdump *.map *.ebf *.content
 
-%.o: %.c $(PROJ).ld
+%.o: %.c $(LD_FILES)
 	$(CC) $(CCFLAGS) -c $< -o $@
 
 _$(PROJ).o: $(OBJS)
