--- a/sw/median/Makefile
+++ b/sw/median/Makefile
@@ -14,15 +14,17 @@ OD = $(CCPATH)/$(CROSS)-objdump
 
 LIBC = ../elibc
 
+LDFILE = dhry_tcm.ld
+
 CCFLAGS = -Wall -O2 -I$(LIBC) -fomit-frame-pointer -fno-builtin -march=rv32im -mstrict-align -mabi=ilp32
-LDFLAGS = -T$(PROJ).ld -Map=$(PROJ).map
+LDFLAGS = -T$(LDFILE) -Map=$(PROJ).map
 LD_SOFT_FP = -L/opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0 -lgcc
 
 OCFLAGS = -O binary
 ODFLAGS = -d
 
 PROJ = median
-OBJS = boot.o median.o median_main.o $(LIBC)/stdio.o $(LIBC)/stdlib.o $(LIBC)/string.o $(LIBC)/time.o $(LIBC)/uart.o $(LIBC)/util.o
+OBJS = crt.o boot.o median.o median_main.o $(LIBC)/stdio.o $(LIBC)/stdlib.o $(LIBC)/string.o $(LIBC)/time.o $(LIBC)/uart.o $(LIBC)/util.o
 
 all:
 	make $(PROJ).ebf
@@ -30,9 +32,11 @@ all:
 clean:
 	rm -rf *.s $(LIBC)/*.o *.o *.bin *.objdump *.map *.ebf *.content
 
-%.o: %.c $(PROJ).ld
+%.o: %.c $(LDFILE)
 	$(CC) $(CCFLAGS) -c $< -o $@
 
+%.o: %.S $(LDFILE)
+	$(CC) $(CCFLAGS) -c $< -o $@
 _$(PROJ).o: $(OBJS)
 	$(LD) $(LDFLAGS) $(OBJS) $(LD_SOFT_FP) -o $@
 
