--- a/sw/multiply/Makefile
+++ b/sw/multiply/Makefile
@@ -12,17 +12,19 @@ LD = $(CCPATH)/$(CROSS)-ld
 OC = $(CCPATH)/$(CROSS)-objcopy
 OD = $(CCPATH)/$(CROSS)-objdump
 
+LD_FILE=dhry_tcm.ld
+
 LIBC = ../elibc
 
 CCFLAGS = -Wall -O2 -I$(LIBC) -fomit-frame-pointer -fno-builtin -march=rv32im -mstrict-align -mabi=ilp32
-LDFLAGS = -T$(PROJ).ld -Map=$(PROJ).map
+LDFLAGS = -T$(LD_FILE) -Map=$(PROJ).map
 LD_SOFT_FP = -L/opt/riscv/lib/gcc/riscv32-unknown-elf/10.2.0 -lgcc
 
 OCFLAGS = -O binary
 ODFLAGS = -d
 
 PROJ = multiply
-OBJS = boot.o multiply.o multiply_main.o $(LIBC)/stdio.o $(LIBC)/stdlib.o $(LIBC)/string.o $(LIBC)/time.o $(LIBC)/uart.o $(LIBC)/util.o
+OBJS = crt.o boot.o multiply.o multiply_main.o $(LIBC)/stdio.o $(LIBC)/stdlib.o $(LIBC)/string.o $(LIBC)/time.o $(LIBC)/uart.o $(LIBC)/util.o
 
 all:
 	make $(PROJ).ebf
@@ -30,7 +32,9 @@ all:
 clean:
 	rm -rf *.s $(LIBC)/*.o *.o *.bin *.objdump *.map *.ebf *.content
 
-%.o: %.c $(PROJ).ld
+%.o: %.c $(LD_FILE)
+	$(CC) $(CCFLAGS) -c $< -o $@
+%.o: %.S $(LD_FILE)
 	$(CC) $(CCFLAGS) -c $< -o $@
 
 _$(PROJ).o: $(OBJS)
